[package]
name = "se_parts"
version = "0.1.1"
authors = ["Raymond Bannan <raymondbannan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
quick-xml = "0.18"
structopt = "0.3"
dirs = "2.0"